# claude_code_autoignore

./: .gitignore  CLAUDE.md  LICENSE  README.md  cc_autoignore  cc_autoignore.py  config_manager.py  core.py  pyproject.toml  resetter.py  scanner.py  status_reporter.py  updater.py
tests/: README.md  conftest.py  test_core.py  test_functional.py  test_integration.py  test_scanner.py
