[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc_autoignore"
version = "0.1.0"
description = "Utility for synchronizing Claude Code's ignore configuration with .gitignore patterns"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "drvitek", email = "code@domain-on-profile"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cc_autoignore = "cc_autoignore:main"

[tool.setuptools]
packages = ["cc_autoignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38", "py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88